src/parser/snapshots/monkey_language_server__parser__test__if_expr_ternary_assignment_missing_semi.snap
---
source: src/parser/test.rs
description: "let x = if (true) { 1 } else { 2 }"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected ';' not found."), (0,33)->(0,34)),
]

===================================

let x = if (true) { 1 } else { 2 }
                                 ^ [Error] SyntaxError: Expected ';' not found.
